--- a/Fantasy_flask/templates/about.html
+++ b/Fantasy_flask/templates/about.html
@@ -5,11 +5,20 @@
     </div>
     <div>
     </div>
-    <legend class='border-bottom mb-4' style="text-align: center;">Rules</legend>
+    <legend class='border-bottom mb-4' style="text-align: center;">About</legend>
     <div style="align-content: center;">
-        <ul>
-            <li></li>
-        </ul>
+        <p>
+            Kritarth Jain
+
+        </p>
+        <p>
+            About Me : Cricket enthusiast and Rohit sharma fan
+            <br>
+            PS : I think he should be India's T20 Caption
+        </p>
+        <p>
+            Email : kritarth.jain11@gmail.com
+        </p>
     </div>
 </div>
 
